# DeepResearch

./: .env  .env.example  .gitignore  README.md  docker-compose.services.yml  pyproject.toml  start.bat  start.sh  stop.bat  stop.sh
.claude/: CLAUDE.md
app/: celery_app.py  main.py
app/agents/: research_agent.py
app/agents/prompts/: research_manager.md  search_agent.md
app/background/: celery_tasks.py  research_tasks.py
app/config/: config.py
app/repository/: mongodb.py  report_repository.py  report_storage.py  research_project_repository.py  research_task_repository.py
app/routers/: __init__.py
app/schemas/: __init__.py
app/test/: __init__.py  tempfile_1782823067449.py  tempfile_1782874222787.py  tempfile_1782879152203.py
app/tools/: external_search.py  ragflow_search.py  render_html.py  research_agent_tool.py  storage_toll.py  web_pag_read.py
mongo/: Dockerfile.mongodb  README.md  init-mongo.js
ragflow-docker/: .gitignore  README.md  docker-compose-base.yml  docker-compose.yml
redis/: README.md
scripts/: test_ragflow_search.py
static/: index.html
